fix: build jvm image